--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>spring</module>
         <module>designStyle</module>
         <module>concurrent</module>
+        <module>securitywithjpa</module>
     </modules>
 
     <dependencies>
