--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>designStyle</module>
         <module>concurrent</module>
         <module>securitywithjpa</module>
+        <module>Elastic-Job</module>
     </modules>
 
     <dependencies>
